# asn1c-demo

./: Makefile.am  configure.ac
src/: asn1cxx.cpp  asn1cxx.hpp  bytes.cpp  bytes.hpp  misc.hpp  refcnt_ptr.hpp
src/asn1c/module/: ATag.c  ATag.h  BTag.c  BTag.h  CTag.c  CTag.h  DTag.c  DTag.h  ETag.c  ETag.h  FTag.c  FTag.h  GTag.c  GTag.h  HTag.c  HTag.h  ITag.c  ITag.h
src/asn1c/module/test/: test.asn1
tests/: test1.cpp  testkit.hpp
